修改了img文件夹

--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@
     <div class="swiper-container wrap1">
         <div>豆豆专属相册</div>
         <div class="swiper-wrapper">
-            <div class="swiper-slide haha"><img src="./img/1.jpg" alt=""></div>
+            <!-- <div class="swiper-slide haha"><img src="./img/1.jpg" alt=""></div>
             <div class="swiper-slide haha"><img src="./img/2.jpg" alt=""></div>
             <div class="swiper-slide haha"><img src="./img/3.jpg" alt=""></div>
-            <div class="swiper-slide haha"><img src="./img/4.jpg" alt=""></div>
+            <div class="swiper-slide haha"><img src="./img/4.jpg" alt=""></div> -->
             <div class="swiper-slide haha"><img src="./img/5.jpg" alt=""></div>
             <div class="swiper-slide haha"><img src="./img/6.jpg" alt=""></div>
             <div class="swiper-slide haha"><img src="./img/7.jpg" alt=""></div>
             <div class="swiper-slide haha"><img src="./img/8.jpg" alt=""></div>
             <div class="swiper-slide haha"><img src="./img/9.jpg" alt=""></div>
-            <div class="swiper-slide haha"><img src="./img/10.jpg" alt=""></div>
+            <!-- <div class="swiper-slide haha"><img src="./img/10.jpg" alt=""></div> -->
         </div>
         <!-- 如果需要分页器 -->
         <div class="swiper-pagination"></div>
